feat: set new design

--- a/index.html
+++ b/index.html
@@ -9,9 +9,18 @@
   <meta name="author" content="Kuznetsova Nails">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://kuznetsovanails.github.io/">
+  <link rel="alternate" hreflang="uk" href="https://kuznetsovanails.github.io/">
+  <link rel="alternate" hreflang="x-default" href="https://kuznetsovanails.github.io/">
+
+  <!-- Favicon -->
+  <link rel="icon" href="img/logo.webp" type="image/webp">
+  <link rel="apple-touch-icon" href="img/logo.webp">
+
   <meta name="theme-color" content="#ffffff">
   <meta name="geo.region" content="UA-30">
   <meta name="geo.placename" content="Kyiv">
+
+  <!-- Open Graph -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://kuznetsovanails.github.io/">
   <meta property="og:title" content="Kuznetsova Nails — Манікюр LUXIO у Оболоні, Київ">
@@ -19,12 +28,16 @@
   <meta property="og:image" content="https://kuznetsovanails.github.io/img/preview.jpg">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
+  <meta property="og:image:alt" content="Kuznetsova Nails — манікюрний салон, Оболонь, Київ">
   <meta property="og:locale" content="uk_UA">
   <meta property="og:site_name" content="Kuznetsova Nails">
+
+  <!-- Twitter / X Card -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Kuznetsova Nails — Манікюр у Оболоні, Київ">
   <meta name="twitter:description" content="Манікюрний салон. Манікюр LUXIO, педикюр. Оболонь, Київ.">
   <meta name="twitter:image" content="https://kuznetsovanails.github.io/img/preview.jpg">
+  <meta name="twitter:image:alt" content="Kuznetsova Nails — манікюрний салон, Оболонь, Київ">
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -46,11 +59,17 @@
     "hasMap": "https://maps.google.com/?q=50.5126,30.4983",
     "priceRange": "$$",
     "openingHoursSpecification": [
-      { "@type": "OpeningHoursSpecification", "dayOfWeek": ["Monday","Tuesday","Wednesday","Thursday","Friday"], "opens": "09:00", "closes": "20:00" },
-      { "@type": "OpeningHoursSpecification", "dayOfWeek": ["Saturday","Sunday"], "opens": "10:00", "closes": "18:00" }
+      {
+        "@type": "OpeningHoursSpecification",
+        "dayOfWeek": ["Monday","Tuesday","Wednesday","Thursday","Friday","Saturday","Sunday"],
+        "opens": "09:00",
+        "closes": "21:00"
+      }
     ],
+    "currenciesAccepted": "UAH",
+    "paymentAccepted": "Cash, Card",
     "sameAs": ["https://www.instagram.com/kuznetsovanails"],
-    "image": "https://kuznetsovanails.github.io/img/preview.jpg"
+    "image": "https://kuznetsovanails.github.io/img/logo.webp"
   }
   </script>
   <style>
