refactor: update index.html

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <meta name="keywords" content="манікюр Оболонь, педикюр Київ, nail salon Оболонь, kuznetsova nails, манікюр LUXIO, нігті Київ">
   <meta name="author" content="Kuznetsova Nails">
   <meta name="robots" content="index, follow">
-  <link rel="canonical" href="https://kuznetsovanails.github.io/">
-  <link rel="alternate" hreflang="uk" href="https://kuznetsovanails.github.io/">
-  <link rel="alternate" hreflang="x-default" href="https://kuznetsovanails.github.io/">
+  <link rel="canonical" href="https://kuznetsovanails.co.ua/">
+  <link rel="alternate" hreflang="uk" href="https://kuznetsovanails.co.ua/">
+  <link rel="alternate" hreflang="x-default" href="https://kuznetsovanails.co.ua/">
 
   <!-- Favicon -->
   <link rel="icon" href="img/logo.webp" type="image/webp">
@@ -22,10 +22,10 @@
 
   <!-- Open Graph -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://kuznetsovanails.github.io/">
+  <meta property="og:url" content="https://kuznetsovanails.co.ua/">
   <meta property="og:title" content="Kuznetsova Nails — Манікюр LUXIO у Оболоні, Київ">
   <meta property="og:description" content="Манікюрний салон у серці Оболоні. 9 років у nail-індустрії. Чисто, якісно, з любов'ю.">
-  <meta property="og:image" content="https://kuznetsovanails.github.io/img/preview.jpg">
+  <meta property="og:image" content="https://kuznetsovanails.co.ua/img/preview.jpg">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
   <meta property="og:image:alt" content="Kuznetsova Nails — манікюрний салон, Оболонь, Київ">
@@ -36,7 +36,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Kuznetsova Nails — Манікюр у Оболоні, Київ">
   <meta name="twitter:description" content="Манікюрний салон. Манікюр LUXIO, педикюр. Оболонь, Київ.">
-  <meta name="twitter:image" content="https://kuznetsovanails.github.io/img/preview.jpg">
+  <meta name="twitter:image" content="https://kuznetsovanails.co.ua/img/preview.jpg">
   <meta name="twitter:image:alt" content="Kuznetsova Nails — манікюрний салон, Оболонь, Київ">
   <script type="application/ld+json">
   {
@@ -45,7 +45,7 @@
     "name": "Kuznetsova Nails",
     "alternateName": "Кузнецова Нейлс",
     "description": "Манікюрний салон у серці Оболоні. Манікюр LUXIO, педикюр. 9 років у nail-індустрії.",
-    "url": "https://kuznetsovanails.github.io/",
+    "url": "https://kuznetsovanails.co.ua/",
     "telephone": "+380936459634",
     "address": {
       "@type": "PostalAddress",
@@ -68,8 +68,8 @@
     ],
     "currenciesAccepted": "UAH",
     "paymentAccepted": "Cash, Card",
-    "sameAs": ["https://www.instagram.com/kuznetsovanails"],
-    "image": "https://kuznetsovanails.github.io/img/logo.webp"
+    "sameAs": ["https://www.instagram.com/_kuznetsova_nails_?igsh=anlzNGNuZmttMTds"],
+    "image": "https://kuznetsovanails.co.ua/img/logo.webp"
   }
   </script>
   <style>
@@ -380,7 +380,7 @@
         <span class="badge">Оболонь, Київ</span>
       </div>
       <div class="hero-cta">
-        <a href="https://ig.me/m/kuznetsovanails"
+        <a href="https://ig.me/m/_kuznetsova_nails_"
            class="btn btn-accent"
            target="_blank" rel="noopener noreferrer"
            aria-label="Записатися на манікюр через Instagram Direct">
@@ -430,7 +430,7 @@
           <p class="section-label">Портфоліо</p>
           <h2 class="section-title">Наші роботи</h2>
         </div>
-        <a href="https://www.instagram.com/kuznetsovanails"
+        <a href="https://www.instagram.com/_kuznetsova_nails_?igsh=anlzNGNuZmttMTds"
            class="btn btn-outline"
            target="_blank" rel="noopener noreferrer"
            aria-label="Дивитися всі роботи в Instagram">
@@ -530,7 +530,7 @@
           <div class="contact-card-icon" aria-hidden="true">📸</div>
           <p class="contact-card-label">Instagram</p>
           <p class="contact-card-value">
-            <a href="https://www.instagram.com/kuznetsovanails" target="_blank" rel="noopener noreferrer">@kuznetsovanails</a>
+            <a href="https://www.instagram.com/_kuznetsova_nails_?igsh=anlzNGNuZmttMTds" target="_blank" rel="noopener noreferrer">@_kuznetsova_nails_</a>
           </p>
           <p class="contact-card-sub">Пишіть у Direct для запису</p>
         </div>
@@ -556,7 +556,7 @@
       <nav class="footer-links" aria-label="Посилання підвалу">
         <a href="#privacy">Політика конфіденційності</a>
         <a href="#contact">Контакти</a>
-        <a href="https://www.instagram.com/kuznetsovanails" target="_blank" rel="noopener noreferrer">Instagram</a>
+        <a href="https://www.instagram.com/_kuznetsova_nails_?igsh=anlzNGNuZmttMTds" target="_blank" rel="noopener noreferrer">Instagram</a>
         <a href="tel:+380936459634">+380 93 645 96 34</a>
       </nav>
     </div>
@@ -587,7 +587,7 @@
         <h3>9. Контакти</h3>
         <p>📞 <a href="tel:+380936459634"><strong>+380 93 645 96 34</strong></a><br>
         📍 вул. Володимира Івасюка 8, корп. 8, Київ, Україна<br>
-        📸 <a href="https://www.instagram.com/kuznetsovanails" target="_blank" rel="noopener noreferrer">@kuznetsovanails</a></p>
+        📸 <a href="https://www.instagram.com/_kuznetsova_nails_?igsh=anlzNGNuZmttMTds" target="_blank" rel="noopener noreferrer">@_kuznetsova_nails_</a></p>
       </div>
     </section>
 
