feat: add privacy policy

--- a/index.html
+++ b/index.html
@@ -316,9 +316,21 @@
     .footer-copy { font-size: .75rem; color: var(--muted); margin-bottom: 28px; }
 
     /* ── PRIVACY ── */
-    .privacy-section { border-top: 1px solid #f0e8ea; padding-top: 24px; }
-    .privacy-section h2 { font-size: 1rem; font-weight: 700; margin-bottom: 6px; }
-    .privacy-date { font-size: .78rem; color: var(--muted); font-style: italic; margin-bottom: 16px; }
+    .privacy-section { border-top: 1px solid #f0e8ea; padding-top: 20px; }
+    .privacy-section summary {
+      font-size: .8rem; font-weight: 600; color: var(--muted);
+      cursor: pointer; list-style: none;
+      display: inline-flex; align-items: center; gap: 6px;
+      padding: 4px 0; border-bottom: 1px dashed var(--border);
+      user-select: none;
+    }
+    .privacy-section summary::-webkit-details-marker { display: none; }
+    .privacy-section summary::after {
+      content: '▾'; font-size: .7rem; transition: transform .2s;
+    }
+    .privacy-section details[open] summary::after { transform: rotate(-180deg); }
+    .privacy-section summary:hover { color: var(--accent); }
+    .privacy-date { font-size: .78rem; color: var(--muted); font-style: italic; margin: 14px 0 16px; }
     .privacy-body { font-size: .82rem; color: var(--muted); line-height: 1.75; }
     .privacy-body h3 { font-size: .86rem; font-weight: 700; color: var(--text); margin: 18px 0 5px; }
     .privacy-body p { margin-bottom: 8px; }
@@ -564,34 +576,36 @@
       </nav>
     </div>
 
-    <p class="footer-copy">© 2023–2025 Kuznetsova Nails. Усі права захищені. Київ, Оболонь, Україна.</p>
+    <p class="footer-copy">© 2023–2026 Kuznetsova Nails. Усі права захищені. Київ, Оболонь, Україна.</p>
 
     <!-- ── PRIVACY POLICY ── -->
     <section class="privacy-section" id="privacy" aria-label="Політика конфіденційності">
-      <h2>Політика конфіденційності</h2>
-      <p class="privacy-date">Дата набрання чинності: 1 вересня 2023 р. | Остання редакція: 22 лютого 2025 р.</p>
-      <div class="privacy-body">
-        <h3>1. Загальні положення</h3>
-        <p>Цей веб-сайт є власністю приватного майстра манікюру та педикюру, що діє під торговою назвою <strong>Kuznetsova Nails</strong> (далі — «Майстер»). Майстер зобов'язується захищати персональні дані відповідно до Закону України «Про захист персональних даних» від 01.06.2010 № 2297-VI та Регламенту ЄС 2016/679 (GDPR).</p>
-        <h3>2. Збір персональних даних</h3>
-        <p>Майстер може обробляти: а) ім'я та номер телефону — при записі через Direct або телефоном; б) технічні дані (IP, браузер) — автоматично збираються <a href="https://docs.github.com/en/site-policy/privacy-policies/github-general-privacy-statement" target="_blank" rel="noopener noreferrer">GitHub Pages</a>. Сайт не використовує cookie, трекери або скрипти аналітики.</p>
-        <h3>3. Мета та правова підстава</h3>
-        <p>Дані обробляються виключно для надання послуг манікюру й педикюру та відповіді на звернення. Підстава: виконання договору (ст. 6(1)(b) GDPR) та згода (ст. 6(1)(a) GDPR).</p>
-        <h3>4. Передача третім особам</h3>
-        <p>Майстер не продає та не розкриває персональні дані третім особам, крім випадків, передбачених законодавством України.</p>
-        <h3>5. Строки зберігання</h3>
-        <p>Контактні дані зберігаються не більше 3 (трьох) років, після чого підлягають знищенню.</p>
-        <h3>6. Ваші права</h3>
-        <p>Ви маєте право на доступ, виправлення, видалення даних та відкликання згоди. Для реалізації прав звертайтесь: <a href="tel:+380936459634"><strong>+380 93 645 96 34</strong></a>.</p>
-        <h3>7. Безпека</h3>
-        <p>Майстер вживає заходів захисту даних від несанкціонованого доступу та розголошення.</p>
-        <h3>8. Зміни до Політики</h3>
-        <p>Актуальна версія завжди доступна на цій сторінці. Продовження використання Сайту означає згоду з оновленою Політикою.</p>
-        <h3>9. Контакти</h3>
-        <p>📞 <a href="tel:+380936459634"><strong>+380 93 645 96 34</strong></a><br>
-        📍 вул. Володимира Івасюка 8, корп. 8, Київ, Україна<br>
-        📸 <a href="https://www.instagram.com/_kuznetsova_nails_?igsh=anlzNGNuZmttMTds" target="_blank" rel="noopener noreferrer">@_kuznetsova_nails_</a></p>
-      </div>
+      <details>
+        <summary>Політика конфіденційності</summary>
+        <p class="privacy-date">Дата набрання чинності: 1 вересня 2023 р. | Остання редакція: 22 лютого 2026 р.</p>
+        <div class="privacy-body">
+          <h3>1. Загальні положення</h3>
+          <p>Цей веб-сайт є власністю приватного майстра манікюру та педикюру, що діє під торговою назвою <strong>Kuznetsova Nails</strong> (далі — «Майстер»). Майстер зобов'язується захищати персональні дані відповідно до Закону України «Про захист персональних даних» від 01.06.2010 № 2297-VI та Регламенту ЄС 2016/679 (GDPR).</p>
+          <h3>2. Збір персональних даних</h3>
+          <p>Майстер може обробляти: а) ім'я та номер телефону — при записі через Direct або телефоном; б) технічні дані (IP, браузер) — автоматично збираються <a href="https://docs.github.com/en/site-policy/privacy-policies/github-general-privacy-statement" target="_blank" rel="noopener noreferrer">GitHub Pages</a>. Сайт не використовує cookie, трекери або скрипти аналітики.</p>
+          <h3>3. Мета та правова підстава</h3>
+          <p>Дані обробляються виключно для надання послуг манікюру й педикюру та відповіді на звернення. Підстава: виконання договору (ст. 6(1)(b) GDPR) та згода (ст. 6(1)(a) GDPR).</p>
+          <h3>4. Передача третім особам</h3>
+          <p>Майстер не продає та не розкриває персональні дані третім особам, крім випадків, передбачених законодавством України.</p>
+          <h3>5. Строки зберігання</h3>
+          <p>Контактні дані зберігаються не більше 3 (трьох) років, після чого підлягають знищенню.</p>
+          <h3>6. Ваші права</h3>
+          <p>Ви маєте право на доступ, виправлення, видалення даних та відкликання згоди. Для реалізації прав звертайтесь: <a href="tel:+380936459634"><strong>+380 93 645 96 34</strong></a>.</p>
+          <h3>7. Безпека</h3>
+          <p>Майстер вживає заходів захисту даних від несанкціонованого доступу та розголошення.</p>
+          <h3>8. Зміни до Політики</h3>
+          <p>Актуальна версія завжди доступна на цій сторінці. Продовження використання Сайту означає згоду з оновленою Політикою.</p>
+          <h3>9. Контакти</h3>
+          <p>📞 <a href="tel:+380936459634"><strong>+380 93 645 96 34</strong></a><br>
+          📍 вул. Володимира Івасюка 8, корп. 8, Київ, Україна<br>
+          📸 <a href="https://www.instagram.com/_kuznetsova_nails_?igsh=anlzNGNuZmttMTds" target="_blank" rel="noopener noreferrer">@_kuznetsova_nails_</a></p>
+        </div>
+      </details>
     </section>
 
   </div>
