refactor: update privacy policy

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     ],
     "currenciesAccepted": "UAH",
     "paymentAccepted": "Cash, Card",
-    "sameAs": ["https://www.instagram.com/_kuznetsova_nails_?igsh=anlzNGNuZmttMTds"],
+    "sameAs": ["https://www.instagram.com/_kuznetsova_nails_"],
     "image": "https://kuznetsovanails.co.ua/img/logo.webp"
   }
   </script>
@@ -445,7 +445,7 @@
           <p class="section-label">Портфоліо</p>
           <h2 class="section-title">Наші роботи</h2>
         </div>
-        <a href="https://www.instagram.com/_kuznetsova_nails_?igsh=anlzNGNuZmttMTds"
+        <a href="https://www.instagram.com/_kuznetsova_nails_"
            class="btn btn-outline"
            target="_blank" rel="noopener noreferrer"
            aria-label="Дивитися всі роботи в Instagram">
@@ -545,7 +545,7 @@
           <div class="contact-card-icon" aria-hidden="true">📸</div>
           <p class="contact-card-label">Instagram</p>
           <p class="contact-card-value">
-            <a href="https://www.instagram.com/_kuznetsova_nails_?igsh=anlzNGNuZmttMTds" target="_blank" rel="noopener noreferrer">@_kuznetsova_nails_</a>
+            <a href="https://www.instagram.com/_kuznetsova_nails_" target="_blank" rel="noopener noreferrer">@_kuznetsova_nails_</a>
           </p>
           <p class="contact-card-sub">Пишіть у Direct для запису</p>
         </div>
@@ -571,18 +571,18 @@
       <nav class="footer-links" aria-label="Посилання підвалу">
         <a href="#privacy">Політика конфіденційності</a>
         <a href="#contact">Контакти</a>
-        <a href="https://www.instagram.com/_kuznetsova_nails_?igsh=anlzNGNuZmttMTds" target="_blank" rel="noopener noreferrer">Instagram</a>
+        <a href="https://www.instagram.com/_kuznetsova_nails_" target="_blank" rel="noopener noreferrer">Instagram</a>
         <a href="tel:+380936459634">+380 93 645 96 34</a>
       </nav>
     </div>
 
-    <p class="footer-copy">© 2023–2026 Kuznetsova Nails. Усі права захищені. Київ, Оболонь, Україна.</p>
+    <p class="footer-copy">© 2026 Kuznetsova Nails. Усі права захищені. Київ, Оболонь, Україна.</p>
 
     <!-- ── PRIVACY POLICY ── -->
     <section class="privacy-section" id="privacy" aria-label="Політика конфіденційності">
       <details>
         <summary>Політика конфіденційності</summary>
-        <p class="privacy-date">Дата набрання чинності: 1 вересня 2023 р. | Остання редакція: 22 лютого 2026 р.</p>
+        <p class="privacy-date">Дата набрання чинності: 22 лютого 2026 р.</p>
         <div class="privacy-body">
           <h3>1. Загальні положення</h3>
           <p>Цей веб-сайт є власністю приватного майстра манікюру та педикюру, що діє під торговою назвою <strong>Kuznetsova Nails</strong> (далі — «Майстер»). Майстер зобов'язується захищати персональні дані відповідно до Закону України «Про захист персональних даних» від 01.06.2010 № 2297-VI та Регламенту ЄС 2016/679 (GDPR).</p>
@@ -603,7 +603,7 @@
           <h3>9. Контакти</h3>
           <p>📞 <a href="tel:+380936459634"><strong>+380 93 645 96 34</strong></a><br>
           📍 вул. Володимира Івасюка 8, корп. 8, Київ, Україна<br>
-          📸 <a href="https://www.instagram.com/_kuznetsova_nails_?igsh=anlzNGNuZmttMTds" target="_blank" rel="noopener noreferrer">@_kuznetsova_nails_</a></p>
+          📸 <a href="https://www.instagram.com/_kuznetsova_nails_" target="_blank" rel="noopener noreferrer">@_kuznetsova_nails_</a></p>
         </div>
       </details>
     </section>
