refactor: update index.html

--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
       <div class="portfolio-header">
         <div>
           <p class="section-label">Портфоліо</p>
-          <h2 class="section-title">Наші роботи</h2>
+          <h2 class="section-title">Майстерність у деталях</h2>
         </div>
         <a href="https://www.instagram.com/_kuznetsova_nails_"
            class="btn btn-outline"
